codificacion de semaforo

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,7 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.sombra{
+    box-shadow: 0 0 40px 0 rgba(255, 255, 255, 0.9), 0 0 40px 0 rgba(255, 0, 0, 0.9);
+}
